test/corpus/declarations.txt
================================================================================
Void function declaration
================================================================================

sub f1 {}

--------------------------------------------------------------------------------

(source_file
  (sub_declaration
    (void_sub_declaration
      (ident)
      (block))))

================================================================================
Typed function declaration
================================================================================

sub f2 INTEGER {}

--------------------------------------------------------------------------------

(source_file
  (sub_declaration
    (typed_sub_declaration
      (ident)
      (type)
      (block))))
